* `allowInterfaces`, which combines `allowInterfacesOnKmock` and `allowInterfacesOnKspy`
* `disableFactories` in order to disable the generation of `kmock` and `kspy` if needed
* `customAnnotationsForMeta` to provide a hook for the usage of customized annotation for meta/shared sources
* `assertOrder` in order to make the names more consistent and preserves the old behaviour of `verifyStrictOrder`
* `assertProxy` as alternative to `verify`

=== Changed

* Generated mocks don't contain runtime logic any longer
* Mutable properties of Proxies now separate froze/unfrozen state is cleaner to improve Runtime
* `kmock` and `kspy` are using now a shared function to improve compile time
* Non intrusive behaviour (spy & relaxation) is now resolved by proxy invocation rather then by proxy initialisation in order to cover edge cases
* Assertion-/VerificationChain is not coupled any longer directly to proxies and provide improved error messages
* Expectation-methods do not bleed into the global context any longer
* `verifyStrictOrder` is now used for total order of certain Proxies but allows partial order between different Proxies

=== Deprecated

* `uselessPrefixes` in the Gradle Extension

=== Removed

* `allowedRecursiveTypes`, since it is no longer needed due to the new spy invocation
* `allowInterfacesOnKmock`, use allowInterfaces instead
* `allowInterfacesOnKspy`, use allowInterfaces instead

=== Fixed

* Method names with nullable or multi-bounded types defined as generic parameter
* Scoped extension are now correctly resolved

=== Security

=== Bumped

* KotlinPoet 1.10.2 -> 1.11.0
* Gradle 7.4.1 -> 7.4.2
* Android Gradle Plugin 7.1.2 -> 7.1.3


== https://github.com/bitPogo/kmock/compare/v0.1.0\...v0.1.1[0.1.1]

=== Fixed

* Warnings for unused expression and unused parameter in MockFactory

=== Bumped

* Gradle 7.2 -> 7.4.1

== https://github.com/bitPogo/kmock/compare/v0.1.0[0.1.0]

Initial release.