@@ -1,168 +1,0 @@
-/*
- * Copyright (c) 2022 Matthias Geisler (bitPogo) / All rights reserved.
- *
- * Use of this source code is governed by Apache v2.0
- */
-
-package tech.antibytes.kmock.verification
-
-import tech.antibytes.kmock.KMockContract
-import tech.antibytes.kmock.KMockContract.ArgumentConstraint
-import tech.antibytes.kmock.KMockContract.FunProxy
-import tech.antibytes.kmock.KMockExperimental
-
-/**
- * Asserts that invocations of a FunProxy happened.
- * @param exactly how often the Proxy was invoked.
- * @throws AssertionError if the amount of calls does not match the expected amount.
- * @see FunProxy
- * @see verify
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun FunProxy<*, *>.assertHasBeenCalled(
-    exactly: Int,
-) {
-    val proxy = this
-    verify(exactly = exactly) {
-        proxy.hasBeenCalledWith()
-    }
-}
-
-/**
- * Asserts that invocations of a FunProxy happened which has no Arguments.
- * @param exactly how often the Proxy was invoked.
- * @throws AssertionError if the amount of calls does not match the expected amount.
- * @see FunProxy
- * @see verify
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun FunProxy<*, *>.assertHasBeenCalledWithVoid(
-    exactly: Int,
-) {
-    val proxy = this
-    verify(exactly = exactly) {
-        proxy.hasBeenCalledWithVoid()
-    }
-}
-
-/**
- * Asserts that invocations of a FunProxy with the given arguments happened.
- * @param exactly how often the Proxy was invoked.
- * @param arguments or constraints which follow the order of the mocked/stubbed function but can contain gaps and do not need to all arguments/constraints.
- * @throws AssertionError if the amount of calls does not match the expected amount.
- * @see FunProxy
- * @see verify
- * @see ArgumentConstraint
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun FunProxy<*, *>.assertHasBeenCalledWith(
-    exactly: Int,
-    vararg arguments: Any?
-) {
-    val proxy = this
-    verify(exactly = exactly) {
-        proxy.hasBeenCalledWith(*arguments)
-    }
-}
-
-/**
- * Asserts that invocations of a FunProxy with the given arguments happened.
- * @param exactly how often the Proxy was invoked.
- * @param arguments or constraints which follow the order of the mocked/stubbed function and need to contain all arguments/constraints.
- * @throws AssertionError if the amount of calls does not match the expected amount.
- * @see FunProxy
- * @see verify
- * @see ArgumentConstraint
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun FunProxy<*, *>.assertHasBeenCalledStrictlyWith(
-    exactly: Int,
-    vararg arguments: Any?
-) {
-    val proxy = this
-    verify(exactly = exactly) {
-        proxy.hasBeenStrictlyCalledWith(*arguments)
-    }
-}
-
-/**
- * Asserts that invocations of a FunProxy did not happened.
- * @throws AssertionError if the amount of calls does not match the expected amount.
- * @see FunProxy
- * @see verify
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun FunProxy<*, *>.assertHasNotBeenCalled() {
-    val proxy = this
-    verify(exactly = 0) {
-        proxy.hasBeenCalledWith()
-    }
-}
-
-/**
- * Asserts that invocations of a FunProxy happened without given parameter.
- * @param illegal unordered arguments/constraints.
- * @throws AssertionError if at least one call contains a given argument.
- * @see FunProxy
- * @see verify
- * @see ArgumentConstraint
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun FunProxy<*, *>.assertHasBeenCalledWithout(
-    vararg illegal: Any?
-) {
-    val proxy = this
-    verify(atMost = Int.MAX_VALUE) {
-        proxy.hasBeenCalledWithout(*illegal)
-    }
-}
-
-/**
- * Asserts that the getter of a PropertyProxy was invoked.
- * @param exactly how often the Proxy was invoked.
- * @throws AssertionError if at least one call contains a given argument.
- * @see FunProxy
- * @see verify
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun KMockContract.PropertyProxy<*>.assertWasGotten(exactly: Int) {
-    val proxy = this
-    verify(exactly = exactly) { proxy.wasGotten() }
-}
-
-/**
- * Asserts that the setter of a PropertyProxy was invoked.
- * @param exactly how often the Proxy was invoked.
- * @throws AssertionError if at least one call contains a given argument.
- * @see FunProxy
- * @see verify
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun KMockContract.PropertyProxy<*>.assertWasSet(exactly: Int) {
-    val proxy = this
-    verify(exactly = exactly) { proxy.wasSet() }
-}
-
-/**
- * Asserts that the setter of a PropertyProxy was invoked with the given value.
- * @param exactly how often the Proxy was invoked.
- * @param value or constraint of the expected value.
- * @throws AssertionError if at least one call contains a given argument.
- * @see FunProxy
- * @see verify
- * @see ArgumentConstraint
- * @author Matthias Geisler
- */
-@KMockExperimental
-fun KMockContract.PropertyProxy<*>.assertWasSetTo(exactly: Int, value: Any?) {
-    val proxy = this
-    verify(exactly = exactly) { proxy.wasSetTo(value) }
-}
